# Chatbot-RAG---Juan-Sebastian-Pena-V.

./: .gitignore  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/: app.py  rag.py
